@startuml lsm6dso_class
title TPP-IntelliFence — Clase Lsm6dso (IMU 6DOF ST LSM6DSO)

skinparam classAttributeIconSize 0
skinparam class {
    BackgroundColor White
    BorderColor Black
    HeaderBackgroundColor DarkRed
    HeaderFontColor White
    FontSize 12
    AttributeFontSize 11
}
skinparam enum {
    BackgroundColor LightYellow
    BorderColor DarkGoldenRod
}
skinparam ArrowColor DarkSlateGray
skinparam linetype ortho

' ──────────────────────────────────────────────
' Enums de configuración (principales)
' ──────────────────────────────────────────────
enum Lsm6dsoOdrAcc << (E,LightYellow) >> {
    POWER_DOWN
    ODR_1_6
    ODR_12_5
    ODR_26
    ODR_52
    ODR_104
    ODR_208
    ODR_416
    ODR_833
    ODR_1K66
    ODR_3K33
    ODR_6K66
}

enum Lsm6dsoFsAcc << (E,LightYellow) >> {
    FS_2G
    FS_16G
    FS_4G
    FS_8G
}

enum Lsm6dsoOdrGyr << (E,LightYellow) >> {
    POWER_DOWN
    ODR_12_5
    ODR_26
    ODR_52
    ODR_104
    ODR_208
    ODR_416
    ODR_833
    ODR_1K66
    ODR_3K33
    ODR_6K66
}

enum Lsm6dsoFsGyr << (E,LightYellow) >> {
    FS_250DPS
    FS_500DPS
    FS_1KDPS
    FS_2KDPS
}

enum Lsm6dsoWakeThs << (E,LightYellow) >> {
    THS_DISABLE = 0
    THS_1..THS_63
}

enum Lsm6dsoWakeDur << (E,LightYellow) >> {
    ODR_0
    ODR_1
    ODR_2
    ODR_3
}

enum Lsm6dsoWakeWeight << (E,LightYellow) >> {
    FS_XL_64
    FS_XL_256
}

enum Lsm6dsoSleepDur << (E,LightYellow) >> {
    DUR_0_512 .. DUR_15_512
}

enum Lsm6dsoI3C << (E,LightYellow) >> {
    ENABLED
    DISABLED
}

' ──────────────────────────────────────────────
' Structs de datos de salida
' ──────────────────────────────────────────────
class BurstFeatures << (S,LightCyan) struct >> {
    + var_total   : uint32_t  ' var_x + var_y + var_z
    + range_z     : uint16_t  ' max_az - min_az
    + range_total : uint16_t  ' range_x + range_y + range_z
    + z_ratio     : uint16_t  ' (range_z * 100) / (range_total + 1) [%]
    + reserved    : uint8_t
}

class AccRaw << (S,LightCyan) struct >> {
    + ax : int16_t
    + ay : int16_t
    + az : int16_t
}

' ──────────────────────────────────────────────
' Dependencia bus
' ──────────────────────────────────────────────
class I2CBus << (C,LightGray) >>

' ──────────────────────────────────────────────
' Clase principal
' ──────────────────────────────────────────────
class Lsm6dso {
    ' ── Atributos públicos (datos acc [mg]) ─
    + ax          : float
    + ay          : float
    + az          : float
    + gx          : float
    + gy          : float
    + gz          : float
    + temperature : float

    ' ── Datos raw ───────────────────────────
    + axRaw   : int16_t
    + ayRaw   : int16_t
    + azRaw   : int16_t
    + gxRaw   : int16_t
    + gyRaw   : int16_t
    + gzRaw   : int16_t
    + tempRaw : int16_t

    ' ── Constructor ─────────────────────────
    + Lsm6dso()

    ' ── Inicialización ──────────────────────
    + init(i2cAddr : uint8_t,\n       i3c : Lsm6dsoI3C = DISABLED,\n       odrAcc : Lsm6dsoOdrAcc = ODR_104,\n       fsAcc  : Lsm6dsoFsAcc = FS_2G,\n       odrGyr : Lsm6dsoOdrGyr = ODR_104,\n       fsGyr  : Lsm6dsoFsGyr = FS_250DPS,\n       wakeThs : Lsm6dsoWakeThs = THS_DISABLE,\n       wakeDur : Lsm6dsoWakeDur = ODR_0,\n       wakeWeight : Lsm6dsoWakeWeight = FS_XL_64,\n       sleepDur : Lsm6dsoSleepDur = DUR_0_512) : bool

    ' ── Lecturas ────────────────────────────
    + readAcceleration() : I2CResult
    + readGyroscope()    : I2CResult
    + readTemperature()  : I2CResult
    + getWhoAmI(whoAmI : uint8_t&) : I2CResult

    ' ── Test ────────────────────────────────
    + testIMU() : void

    ' ── Atributos privados ──────────────────
    - i2cAddr        : uint8_t
    - i2cBus         : I2CBus*
    - initialized    : bool

    ' ── Config almacenada ───────────────────
    - i3cConfig        : Lsm6dsoI3C
    - odrAccConfig     : Lsm6dsoOdrAcc
    - fsAccConfig      : Lsm6dsoFsAcc
    - odrGyrConfig     : Lsm6dsoOdrGyr
    - fsGyrConfig      : Lsm6dsoFsGyr
    - wakeThsConfig    : Lsm6dsoWakeThs
    - wakeDurConfig    : Lsm6dsoWakeDur
    - wakeWeightConfig : Lsm6dsoWakeWeight
    - sleepDurConfig   : Lsm6dsoSleepDur

    ' ── Config de registros ──────────────────
    - configure(...) : bool
    - setConfigurationREG_CTRL1_XL(odrAcc, fsAcc) : uint8_t
    - setConfigurationREG_CTRL2_G(odrGyr, fsGyr) : uint8_t
    - setConfigurationREG_CTRL3_C(ifInc) : uint8_t
    - setConfigurationREG_CTRL6_C(xlHm) : uint8_t
    - setConfigurationREG_CTRL7_G(gHm) : uint8_t
    - setConfigurationREG_CTRL9_XL(i3c) : uint8_t
    - setConfigurationREG_TAP_CFG0(sF) : uint8_t
    - setConfigurationREG_TAP_CFG2(intEn, inActEn) : uint8_t
    - setConfigurationREG_WAKE_UP_THS(wakeThs) : uint8_t
    - setConfigurationREG_WAKE_UP_DUR(wakeDur, wakeWeight, sleepDur) : uint8_t
    - setConfigurationREG_MD1_CFG(intWU) : uint8_t

    ' ── I2C bajo nivel ──────────────────────
    - writeRegister(reg : uint8_t, value : uint8_t) : I2CResult
    - readRegister(reg : uint8_t, value : uint8_t&) : I2CResult
    - readRegisters(reg : uint8_t, data : uint8_t*, length : uint16_t) : I2CResult

    ' ── Conversión (raw → unidades físicas) ─
    - lsm6dso_from_fs2_to_mg(lsb : int16_t) : float_t
    - lsm6dso_from_fs4_to_mg(lsb : int16_t) : float_t
    - lsm6dso_from_fs8_to_mg(lsb : int16_t) : float_t
    - lsm6dso_from_fs16_to_mg(lsb : int16_t) : float_t
    - lsm6dso_from_fs250_to_mdps(lsb : int16_t) : float_t
    - lsm6dso_from_fs500_to_mdps(lsb : int16_t) : float_t
    - lsm6dso_from_fs1000_to_mdps(lsb : int16_t) : float_t
    - lsm6dso_from_fs2000_to_mdps(lsb : int16_t) : float_t
    - lsm6dso_from_lsb_to_celsius(lsb : int16_t) : float_t
}

' ──────────────────────────────────────────────
' Relaciones
' ──────────────────────────────────────────────
Lsm6dso "1" *-- "1"  I2CBus         : usa (I2C2) >
Lsm6dso ..>  BurstFeatures           : <<produce>>
Lsm6dso ..>  AccRaw                  : <<usa>>
Lsm6dso ..>  Lsm6dsoOdrAcc          : <<parámetro>>
Lsm6dso ..>  Lsm6dsoFsAcc           : <<parámetro>>
Lsm6dso ..>  Lsm6dsoOdrGyr          : <<parámetro>>
Lsm6dso ..>  Lsm6dsoFsGyr           : <<parámetro>>
Lsm6dso ..>  Lsm6dsoWakeThs         : <<parámetro>>
Lsm6dso ..>  Lsm6dsoWakeDur         : <<parámetro>>
Lsm6dso ..>  Lsm6dsoWakeWeight      : <<parámetro>>
Lsm6dso ..>  Lsm6dsoSleepDur        : <<parámetro>>
Lsm6dso ..>  Lsm6dsoI3C             : <<parámetro>>

note bottom of Lsm6dso
  Protocolo: I2C2 (thread-safe via I2CBus)
  Módulo: STMicroelectronics LSM6DSO
  Configuración predeterminada en uso:
    Acelerómetro: 26 Hz, ±2g
    Giroscopio: POWER_DOWN (no usado)
  BurstFeatures → clasificación de estado de vaca:
    var_total + range_z + z_ratio → CowState
end note

@enduml
